# minicpm-mvp

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.app  pyproject.toml  requirements-docker.txt  requirements_new.txt  requirementsapp.txt
pro/: live.html  main.py
pro-frontend/: .env.example  index.html  package.json
pro-frontend/src/: App.tsx  index.css
pro-frontend/src/components/Chat/: ChatInput.tsx  MessageBubble.tsx  MessageList.tsx
pro-frontend/src/components/Layout/: Sidebar.tsx  TopBar.tsx
pro-frontend/src/components/Media/: DuplexMicButton.tsx  LiveWebcam.tsx  PhotoDropzone.tsx  VideoUpload.tsx
pro-frontend/src/context/: AppContext.tsx
pro-frontend/src/hooks/: useWebSocket.ts
pro-frontend/src/types/: ws.ts
pro-frontend/src/utils/: duplexAudio.ts
scripts/: download_minicpm_o_4_5.py  download_minicpm_v_4_5.py  setup_docker_gpu.py
src/: live.html  main.py
web_demos/: web_demo_4_5.py
