[project]
name = "minicpm-o"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "accelerate>=1.12.0",
    "decord>=0.6.0",
    "gradio>=5.0,<6",
    "huggingface-hub>=0.36.2",
    "numpy>=1.24,<2",
    "peft>=0.18.1",
    "pillow>=11.3.0",
    "safetensors>=0.7.0",
    "tokenizers>=0.21.4",
    "torch>=2.4",
    "torchvision>=0.25.0",
    "transformers>=4.52,<4.53",
]
